--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Vercel Page</title>
+    <title>Security Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Vercel Site!</h1>
-    <p id="text">Click the button to change this text.</p>
-    <button onclick="changeText()">Click Me</button>
-    <script src="script.js"></script>
+    <h1>Hello this is security test</h1>
+    <p>Your data has been transferred to the attacker! Not really :)</p>
+    <script>
+        console.log("User visited from Judge.me XSS")
+    </script>
 </body>
 </html>
